# ai-desktop-agent

./: .gitignore  CLAUDE.md  DEVLOG.md  README.md  env.example  main.py  pyproject.toml
.github/workflows/: ci.yml
agent/: core.py  memory.py  planner.py
ai/: base.py  chat_ai.py  cloud_provider.py  local_provider.py  ollama_provider.py  personality.py
config/: app_config.py  settings.yaml
config/personalities/: maid_cat.yaml
execution/: keyboard.py  mouse.py  window_ctrl.py
gui/: floating_widget.py  main_window.py  settings_page.py  tray.py
perception/: screen.py  window.py
safety/: guard.py
tests/: conftest.py  test_agent_core.py  test_cloud_provider.py  test_execution.py  test_ollama_provider.py  test_placeholder.py  test_screen.py  test_window_perception.py
tools/: coord_debug.py
training/: Modelfile  annotate_ui.py  gen_data.py  train.py
